# Natural-Language-Processing

./: .gitignore  Advanced_NLP_with_spaCy.ipynb  BERT_Research_Series.ipynb  Flair NLP framework 640f1a253b9b4054a6f30b3ec8bf26ae.md  README.md  Real_World_Python_Machine_Learning_Tutorial.ipynb  Regex101.ipynb  Text_Generation_With_LSTM_Recurrent_Neural_Networks_in_Python_with_Keras.ipynb  Understanding Transformers.md  Understanding_Word2Vec.ipynb  pyproject.toml
Advanced NLP with spaCy course/: Advanced_NLP_with_spaCy.ipynb  main.py  transcript.txt
LLM Concepts/Langchain Tutorials/: nb01.ipynb
LLM Concepts/Tools and Agents/: tool1.ipynb
LLM Concepts/langgraph tutorials/: langgraph_01.ipynb  langgraph_02.ipynb
LLM Concepts/llamaindex_tutorials/: intro.ipynb
Project - Detecting programming languages with NLP/: Detecting programming langauages with spaCy.ipynb  README.md
Real-World Python Machine Learning Tutorial - Keith Galli/: Real_World_Python_Machine_Learning_Tutorial.ipynb
Sentiment Analysis/: 1_Simple_Sentiment_Analysis.ipynb  4_Convolutional_Sentiment_Analysis.ipynb
The Bloom Embeddings Algorithm/: The Bloom Embeddings Algorithm.ipynb
Transformers/: Attention in Deep Learning - Intuition and in-dept 817748f1b8ed4b4c8b3647c5f13b3a54.md  Attention in Deep Learning.md  Encoder decoder architecture.md  Understanding Transformers 9ab6d3a269fc41cda6d5c8ea5163c490.md  Understanding Transformers.md
Word Embedding Techniques/: How_to_Use_Word_Embedding_Layers_for_Deep_Learning_with_Keras.ipynb  Python_gensim_Word2Vec.ipynb  Understanding_Doc2Vec.ipynb  Understanding_Word2Vec.ipynb  WMD_Python_Genism.ipynb  Word2Vec_Revisitied.ipynb
langraph-projects/: langraph_basics.ipynb  pyproject.toml
(+33 files in other folders)
